--- a/app/src/main/res/layout/act_quebra_cabeca.xml
+++ b/app/src/main/res/layout/act_quebra_cabeca.xml
@@ -34,7 +34,7 @@
             app:srcCompat="@drawable/paisagem" />
 
         <LinearLayout
-            android:layout_width="170dp"
+            android:layout_width="140dp"
             android:layout_height="150dp"
             android:layout_marginLeft="50dp"
             android:orientation="vertical">
@@ -53,7 +53,7 @@
                     android:layout_marginTop="5dp"
                     android:text="Escolha As Peças"
                     android:textAlignment="viewStart"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -74,7 +74,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -90,7 +90,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -107,7 +107,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -123,7 +123,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -139,7 +139,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -155,7 +155,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -172,7 +172,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -189,7 +189,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -206,7 +206,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -223,7 +223,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -240,7 +240,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -256,7 +256,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -273,7 +273,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -289,7 +289,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -305,7 +305,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -321,7 +321,7 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="10dp"
-                        android:background="@android:color/holo_red_dark"
+                        android:background="#88fff1"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -639,7 +639,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Verificar"
+            android:onClick="btnVerifiarQb"
+            android:text="@string/verificar"
             android:textStyle="bold" />
 
     </LinearLayout>
