--- a/app/src/main/res/layout/act_quebra_cabeca_slider.xml
+++ b/app/src/main/res/layout/act_quebra_cabeca_slider.xml
@@ -4,16 +4,259 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ActQuebraCabecaSlider">
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="Quebra Cabeça Slider"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="70dp"
+            android:background="@color/colorAccent"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.GridLayout
+                android:id="@+id/gridTabuleiroSlider"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img4"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="3"
+                        app:srcCompat="@drawable/img4_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="1"
+                    app:layout_row="0">
+
+                    <ImageView
+                        android:id="@+id/imageButton"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="2"
+                    app:layout_row="0">
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img6"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="5"
+                        app:srcCompat="@drawable/img6_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="0"
+                    app:layout_row="1">
+
+                    <ImageView
+                        android:id="@+id/imageView7"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img2"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="1"
+                        app:srcCompat="@drawable/img2_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="1"
+                    app:layout_row="1">
+
+                    <ImageView
+                        android:id="@+id/imageView9"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img3"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="2"
+                        app:srcCompat="@drawable/img3_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="2"
+                    app:layout_row="1">
+
+                    <ImageView
+                        android:id="@+id/imageView12"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img1"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="0"
+                        app:srcCompat="@drawable/img1_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="0"
+                    app:layout_row="2">
+
+                    <ImageView
+                        android:id="@+id/imageView14"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img5"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="4"
+                        app:srcCompat="@drawable/img5_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="1"
+                    app:layout_row="2">
+
+                    <ImageView
+                        android:id="@+id/imageView16"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img8"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="7"
+                        app:srcCompat="@drawable/img8_slider" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:orientation="horizontal"
+                    app:layout_column="2"
+                    app:layout_row="2">
+
+                    <ImageView
+                        android:id="@+id/imageView17"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:drawable/btn_dialog" />
+
+                    <ImageView
+                        android:id="@+id/img7"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:tag="6"
+                        app:srcCompat="@drawable/img7_slider" />
+
+                </LinearLayout>
+            </android.support.v7.widget.GridLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:onClick="verificar"
+            android:text="Verificar"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:onClick="voltar"
+            android:text="Voltar"
+            android:textAlignment="center"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 </LinearLayout>
