--- a/app/src/main/res/layout/act_about.xml
+++ b/app/src/main/res/layout/act_about.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:layout_weight="1"
-            android:text="Matheus Lima"
+            android:text="Matheus Lima Dos Santos"
             android:textAlignment="center"
             android:textColor="#000"
             android:textSize="24sp"
